// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <span
      class="badge outline svelte-zsk4sa"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Badge Theme 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <span
      class="badge dark svelte-zsk4sa"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Internal/Icon Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="icon-phone"
  />
</section>
`;
